--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 		      After each guess, the colour of the tiles will change to show how close your guess was to the word.
 			  <br><br>
 			  <img class="colorimage" src="color.PNG"><br>
-			  <h3><center>Play multiple times a day!<br><br><br></h3>
+			  <h3><center>Play multiple times a day!</h3>
 			  <!-- MODE :- <input type="button" id="mode" value="EASY" onclick="toggle(this);"></center> -->
-			  <br><br>
+			  <footer id="footer">
+				<a href="mailto: geowordle@gmail.com">Contact</a>
+		      </footer>
 			</div>		
   </div>
   <div id="overlay"></div>
