--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   gtag('config', 'G-MEBRVZNPE4');
 </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>GEORDLE!</title>
   <link href="geordle.css" rel="stylesheet">
