--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
   gtag('config', 'G-MEBRVZNPE4');
 </script>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>GEORDLE!</title>
+  <title>Geordle - Wordle for Countries and Capitals</title>
   <link href="geordle.css" rel="stylesheet">
   <link rel="icon" href="favicon.ico">
   <script defer src="geordle.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+        <!-- add icon link -->
+        <link rel = "icon" href = "https://sank0403.github.io/gordle/maporig.jpg" 
+        type = "image/x-icon">  
 </head>
 <body>
  <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
