--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Geordle - Wordle for Countries and Capitals</title>
   <link href="geordle.css" rel="stylesheet">
-  <link rel="icon" href="favicon.ico">
   <script defer src="geordle.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <!-- add icon link -->
-        <link rel = "icon" href = "https://sank0403.github.io/gordle/maporig.jpg" 
+        <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
         type = "image/x-icon">  
 </head>
 <body>
