--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <!-- add icon link -->
         <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
         type = "image/x-icon">  
+    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="icon shortcut" />
+    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="apple-touch-icon" />			
 </head>
 <body>
  <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
