--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <!-- add icon link -->
         <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
         type = "image/x-icon">  
+    <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		
     <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="icon shortcut" />
     <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="apple-touch-icon" />			
 </head>
 <body>
- <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
+ <center><img class="headerimage" src="mapicon.jpg"><br><div id="title">GEORDLE</div><br>
 	<br> 
   <button data-modal-target="#modal">Game Rules</button> 
       <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
