--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
         type = "image/x-icon">  
     <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		
-    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="icon shortcut" />
+    <link href="https://sank0403.github.io/geordle/mapicon48x48.png" rel="icon shortcut" sizes="3232" />
     <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="apple-touch-icon" />			
 </head>
 <body>
