--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         type = "image/x-icon">  
     <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		
     <link href="https://sank0403.github.io/geordle/mapicon48x48.png" rel="icon shortcut" sizes="3232" />
-    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="apple-touch-icon" />			
+    <link href="https://sank0403.github.io/geordle/mapicon48x48.png" rel="apple-touch-icon" />			
 </head>
 <body>
  <center><img class="headerimage" src="mapicon.jpg"><br><div id="title">GEORDLE</div><br>
