--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
         type = "image/x-icon">  
     <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		
-    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="icon shortcut" sizes="3232" />
-    <link href="https://sank0403.github.io/geordle/maporig.jpg" rel="apple-touch-icon" />			
+    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" />
+    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />			
 </head>
 <body>
  <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
