--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <link href="geordle.css" rel="stylesheet">
   <script defer src="geordle.js"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-        <!-- add icon link -->
-        <link rel = "icon" href = "https://sank0403.github.io/geordle/maporig.jpg" 
+        <!-- add icon link for all standard browsers -->
+        <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
         type = "image/x-icon">  
-    <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		
+    <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
     <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" />
-    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />			
+    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
  <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
