--- a/index.html
+++ b/index.html
@@ -1,71 +1,70 @@
 <html lang="en">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MEBRVZNPE4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-MEBRVZNPE4');
-</script>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Geordle - Wordle for Countries and Capitals</title>
-  <link href="geordle.css" rel="stylesheet">
-  <script defer src="geordle.js"></script>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-        <!-- add icon link for all standard browsers -->
-        <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
-        type = "image/x-icon">  
-    <link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
-    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" />
-    <link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MEBRVZNPE4"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'G-MEBRVZNPE4');
+	</script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Geordle - Wordle for Countries and Capitals</title>
+	<link href="geordle.css" rel="stylesheet">
+	<script defer src="geordle.js"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+    <!-- add icon link for all standard browsers -->
+    <link rel = "icon" href = "https://sank0403.github.io/geordle/mapicon.jpg" 
+            type = "image/x-icon">  
+	<link rel="manifest" href="https://sank0403.github.io/geordle/geordle_manifest.json" />		<!--for shortcut icons and transitions-->	
+	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="icon shortcut" sizes="3232" /> <!--follow same as indle - usually a smaller version-->
+	<link href="https://sank0403.github.io/geordle/mapicon.jpg" rel="apple-touch-icon" />	<!--This is the phone icon web title image-->		
 </head>
 <body>
- <center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
-	<br> 
-  <button data-modal-target="#modal">Game Rules</button> 
-      <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
-	  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; 
-  <input type="button" id="hint" value="Show 1st Letter" onclick="this.disabled=true; hint();">	  </center>	
-  <div class="modal" id="modal">
-    <div class="modal-header">
-      <div class="title">How To Play</div>
-	  
-      <button data-close-button class="close-button">&times;</button>
-    </div>
-			<div class ="modal-body">
-			  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. The rules remain mostly the same. 
-			  <br><br>
-			  Try names of COUNTRIES or CAPITALS depending on the game type. This is a random selection as it is important to know CAPITALS too :).
-			  <br><br>
-			  Guess the COUNTRY/CAPITAL within the allowed number of tries. Hit the enter button to submit.
-<!--               <br><br>
-			  In the Easy Mode, the length of the guess NEED NOT match the lenth of the answer. To challenge yourself, try the Hard Mode.
-              <br><br>
-			  In the Hard Mode, the lengths of the guesses and the answer MUST match. This mode is designed for Experts. -->
-              <br><br>
-		      Use the Hint button, to reveal the first letter. This can be used only once per game. 	  
-              <br><br>
-		      After each guess, the colour of the tiles will change to show how close your guess was to the word.
-			  <br><br>
-			  <img class="colorimage" src="color.PNG"><br>
-			  <h3><center>Play multiple times a day!</h3>
-			  <!-- MODE :- <input type="button" id="mode" value="EASY" onclick="toggle(this);"></center> -->
-			  <footer id="footer">
-				<a href="mailto: geowordle@gmail.com">Contact</a>
+	<center><img class="headerimage" src="maporig.jpg"><br><div id="title">GEORDLE</div><br>
+			<br> 
+	<button data-modal-target="#modal">Game Rules</button> 
+    <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
+	<!-- &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;  -->
+	<input type="button" id="hint" value="Show 1st Letter" onclick="this.disabled=true; hint();">	 
+	<input type="button" id="giveup" value="Give Up" onclick="giveUp();">  </center>	
+	<div class="modal" id="modal">
+		<div class="modal-header">
+			<div class="title">How To Play</div>	  
+				<button data-close-button class="close-button">&times;</button>
+		</div>
+		<div class ="modal-body">
+		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. The rules remain mostly the same. 
+		  <br><br>
+		  Try names of COUNTRIES or CAPITALS depending on the game type. This is a random selection as it is important to know CAPITALS too :).
+		  <br><br>
+		  Guess the COUNTRY/CAPITAL within the allowed number of tries. Hit the enter button to submit.
+<!--          <br><br>
+		  In the Easy Mode, the length of the guess NEED NOT match the lenth of the answer. To challenge yourself, try the Hard Mode.
+		  <br><br>
+		  In the Hard Mode, the lengths of the guesses and the answer MUST match. This mode is designed for Experts. -->
+		  <br><br>
+		  Use the Hint button, to reveal the first letter. This can be used only once per game. 	  
+		  <br><br>
+		  After each guess, the colour of the tiles will change to show how close your guess was to the word.
+		  <br><br>
+		  <img class="colorimage" src="color.PNG"><br>
+		  <h3><center>Play multiple times a day!</h3>
+		  <!-- MODE :- <input type="button" id="mode" value="EASY" onclick="toggle(this);"></center> -->
+		  <footer id="footer">
+		  <a href="mailto: geowordle@gmail.com">Contact</a>
 		      </footer>
-			</div>		
-  </div>
-  <div id="overlay"></div>
+		</div>		
+	</div>
+	<div id="overlay"></div>
 		<hr>
         <br>
-        <div id="board"></div>
+    <div id="board"></div>
         <br>
-        <h1 id="answer"></h1>
+    <h1 id="answer"></h1>
 	   <br><br>
-    </body>
     </body>
 </html>
 
