--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 		<span id="time"></span>
 		</div>	
 	</div>		
+		<input type="button" value="Buy Me a Coffee❤️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank')" class="buttoncoffee"><br>	
         <br>
     <div id="board"></div>
         <br>
