--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 			<span style="--i:7">E</span>
 		</div>
 	</div>
-	<button data-modal-target="#modal" class="buttonrad">Rules</button> 
+	<button data-modal-target="#modal" class="buttonrad">Rules❓</button> 
     <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
 	<!-- &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;  -->
-	<input type="button" id="hint" value="Hint" onclick="this.disabled=true; hint();" class="buttonrad">	 
-	<input type="button" id="giveup" value="Give Up" onclick="giveUp();" class="buttonrad">  </center>	
+	<input type="button" id="hint" value="Hint 💡" onclick="this.disabled=true; hint();" class="buttonrad">	 
+	<input type="button" id="giveup" value="Give Up 👎" onclick="giveUp();" class="buttonrad">  </center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
 			<div class="title"><strong>
@@ -111,15 +111,14 @@
 		</div>		
 	</div>
 	<div id="overlay"></div>
-		<hr>
+		<hr>			
     <div id="stats"> 
 		<div id="stats-item">
 		<span id="wins"></span>
 		<span id="time"></span>
-		</div>	
-	</div>		
-		<input type="button" value="Buy Me a Coffee❤️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank')" class="buttoncoffee"><br>	
-        <br>
+		</div>			
+	</div>	
+		<input type="button" value="❤️Buy Me a Coffee❤️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank')" class="buttoncoffee"><br><br>	
     <div id="board"></div>
         <br>
     <h1 id="answer"></h1>
