--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 	<button data-modal-target="#modal" class="buttonrad">Rules❓</button> 
     <!--&nbsp; &nbsp;  MODE :-     <input type="button" id="mode" value="EASY" onclick="toggle(this); "></center>-->
 	<!-- &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;  -->
-	<input type="button" id="hint" value="Hint 💡" onclick="this.disabled=true; hint();" class="buttonrad">	 
-	<input type="button" id="giveup" value="Give Up 👎" onclick="giveUp();" class="buttonrad">  </center>	
+	<input type="button" id="hint" value="Hint💡" onclick="this.disabled=true; hint();" class="buttonrad">	 
+	<input type="button" id="giveup" value="Give Up👎" onclick="giveUp();" class="buttonrad">  </center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
 			<div class="title"><strong>
@@ -58,7 +58,7 @@
 		<div class ="modal-body">
 		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. The rules remain mostly the same. 
 		  <br><br>
-		  Try names of COUNTRIES or CAPITALS depending on the game type. This is a random selection as it is important to know CAPITALS too :).
+		  Try names of COUNTRIES or CAPITALS depending on the Game Mode. This is a random selection as it is important to know CAPITALS too :).
 		  <br><br>
 		  Guess the COUNTRY/CAPITAL within the allowed number of tries. Hit the enter button to submit.
 <!--          <br><br>
@@ -66,7 +66,7 @@
 		  <br><br>
 		  In the Hard Mode, the lengths of the guesses and the answer MUST match. This mode is designed for Experts. -->
 		  <br><br>
-		  Lengths of your guesses does not matter, as long as it is a valid COUNTRY/CAPITAL (depending on the game type). 		  
+		  Lengths of your guesses does not matter, as long as it is a valid COUNTRY/CAPITAL (depending on the Game Mode). 		  
 		  <br><br>
 		  Use the Hint button, to reveal the first letter. This can be used only once per game. 	  
 		  <br><br>
@@ -115,12 +115,12 @@
     <div id="stats"> 
 		<div id="stats-item">
 		<span id="wins"></span>
+		<span id="mode">Mode: </span>		
 		<span id="time"></span>
 		</div>			
 	</div>	
-		<input type="button" value="❤️Buy Me a Coffee❤️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank')" class="buttoncoffee"><br><br>	
+		<input type="button" value="❤️Buy Me a Coffee❤️" onclick="window.open('https://www.buymeacoffee.com/sank0403/','_blank')" class="buttoncoffee"><br>
     <div id="board"></div>
-        <br>
     <h1 id="answer"></h1>
 	   <br><br>
     </body>
