--- a/practice/index.html
+++ b/practice/index.html
@@ -59,7 +59,7 @@
 				<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class ="modal-body">
-		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. The rules remain mostly the same. 
+		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. This is the Practice Mode. Switch to Daily Mode for the actual Game. 
 		  <br><br>
 		  Try names of COUNTRIES or CAPITALS depending on the Game Mode. This is a random selection as it is important to know CAPITALS too :).
 		  <br><br>
@@ -109,7 +109,7 @@
 			<br><br><br>	
 			None of these letters are in the Answer at all.		
 			<br><br>
-		  <center><b>Play multiple times a day!<b></center>
+		  <center><b>Practice multiple times a day!<b></center>
 		  <div class="email"><a href="mailto: geowordle@gmail.com">📧</a></div>
 		</div>		
 	</div>
