--- a/practice/index.html
+++ b/practice/index.html
@@ -42,7 +42,7 @@
 	<!-- <input type="button" id="hint" value="Hint💡" onclick="this.disabled=true; hint();" class="buttonrad">	  -->
 	<input type="button" id="hint" value="💡HINT" onclick="hint(); this.blur();" class="buttonrad">
 	<input type="button" id="giveup" value="GIVE UP👎" onclick="giveUp(); this.blur();" class="buttonrad"> 
-	<input type="button" id="" value="DAILY🌎" onclick="window.open('https://sank0403.github.io/geordle/','_blank'); this.blur();" class="buttonrad">
+	<input type="button" id="" value="DAILY🌎" onclick="window.open('https://sank0403.github.io/geordle/'); this.blur();" class="buttonrad">
 	</center>	
 	<div class="modal" id="modal">
 		<div class="modal-header">
