--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		  <br><br>
 		  If you identify the COUNTRY and CAPITAL successfully, before running out of all lives, you convert the remaining lives into ⭐'s. You can get a maximum of 5⭐'s every day.   
 		  <br><br>
-		  Use the Practice Button, to play an unlimited mode to improve your COUNTRY and CAPITAL IQ.  
+		  Use the Practice Button, to play an unlimited mode (different format) to improve your COUNTRY and CAPITAL IQ.  
 		  <br><br>
 		  <center><b>EXAMPLES</b><br></center>
 		  <br><div><u>COUNTRY</u></div><br>
