--- a/practice/index.html
+++ b/practice/index.html
@@ -59,9 +59,7 @@
 				<button data-close-button class="close-button">&times;</button>
 		</div>
 		<div class ="modal-body">
-		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. This is the Practice Mode. Switch to Daily Mode for the actual Game. 
-		  <br><br>
-		  Try names of COUNTRIES or CAPITALS depending on the Game Mode. This is a random selection as it is important to know CAPITALS too :).
+		  GEORDLE is a spin-off on the popular <a href="https://www.nytimes.com/games/wordle/index.html"><b>WORDLE</b></a> game for Geography Lovers. This is the Practice Mode, where you can refresh your knowledge of COUNTRIES and CAPITALS. Switch to the Daily Mode for the actual Game, which is in a slightly different format. 
 		  <br><br>
 		  Guess the COUNTRY/CAPITAL within the allowed number of tries. Hit the enter button to submit.
 <!--          <br><br>
@@ -69,9 +67,11 @@
 		  <br><br>
 		  In the Hard Mode, the lengths of the guesses and the answer MUST match. This mode is designed for Experts. -->
 		  <br><br>
-		  Lengths of your guesses does not matter, as long as it is a valid COUNTRY/CAPITAL (depending on the Game Mode). 		  
+		  You dont have to match the Lengths when your Enter, as long as it is a valid COUNTRY/CAPITAL depending on the Mode. For eg: if you are playing the CAPITAL Mode and Capital to be identifed
+		  is ASMARA (6 letters), you could try SUVA (less than 6 letters) since that is a valid Capital. You cannot however, try INDIA (since it is a Country and not a Capital). Similarly vice-versa for 
+		  the COUNTRY Mode. Modes are selected at random for Practice. 
 		  <br><br>
-		  Use the Hint button, to reveal ONE letter. There is a 5 sec time penalty for each use.  
+		  Use the Hint button, to reveal ONE letter at a time. There is a 5 sec time penalty for each use.  
 		  <br><br>
 		  After each guess, the colour of the tiles will change to show how close your guess was to the answer.
 		  <br><br>
