--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<span class="tile "></span>
 			</div>
 			<br><br><br>
-			The letter 'D' is in the 3rd spot of the Country.
+			The letter 'D' is in the 3rd position of the Country.
 			<br><br>	
 		  <br><div><u>CAPITAL</u></div><br>
 			<div style="float:left; display:flex;">
@@ -130,7 +130,7 @@
 				<span class="tile correct">A</span>
 			</div>
 			<br><br><br>
-			The letter 'A' is in the 1st, 4th and 6th spot of the Capital.
+			The letter 'A' is in the 1st, 4th and 6th position of the Capital.
 			<br><br>			
 		  <center><b>A new GEORDLE will be available each Day!<b></center>
 		</div>		
@@ -178,7 +178,7 @@
 			</div>
 			<div>
 				<div id="pzlhdr">Try a different puzzle.</div>
-				<div id="pzl"><b><a href="https://indlegame.github.io/indle" target="_">Play <u>INDLE</u> 🇮🇳 </a></b>
+				<div id="pzl"><b><a href="https://tenizgame.github.io/" target="_">Play <u>TENIZ</u> 🎾 </a></b>
 				</div>
 			</div>
 		</div>
