--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	  gtag('config', 'G-MEBRVZNPE4');
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 	<!-- 	<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 	<script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti/dist/tsparticles.preset.confetti.bundle.min.js"></script> -->
@@ -103,7 +104,7 @@
 		  <br><br>
 		  In the Hard Mode, the lengths of the guesses and the answer MUST match. This mode is designed for Experts. -->
 		  <br><br>
-		  If you identify the COUNTRY and CAPITAL successfully, before running out of all lives, you convert the remaining lives into ⭐'s. You can get a maximum of 5⭐'s every day.   
+		  If you identify the COUNTRY and CAPITAL successfully, before running out of all lives, you convert the remaining lives into ⭐'s. You can get a maximum of 5 ⭐'s every day.   
 		  <br><br>
 		  Use the Practice Button, to play an unlimited mode (different format) to improve your COUNTRY and CAPITAL IQ.  
 		  <br><br>
