--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	  gtag('config', 'G-MEBRVZNPE4');
 	</script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
+	<!-- <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script> -->
 	<!-- 	<script src="https://cdn.jsdelivr.net/npm/tsparticles"></script>
 	<script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/npm/tsparticles-preset-confetti/dist/tsparticles.preset.confetti.bundle.min.js"></script> -->
@@ -158,10 +158,11 @@
 				<span id="9" class="summary-item"></span>
 			</div>
 			<br>
-			<br>
+			<div id="ffhdr"><center>TRIVIA</center></div>
+			<div id="ffdtl"></div>
+			<div id="ffhdr"><center>STAR DISTRIBUTION</center></div>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
-
 			<!-- The button used to copy the text -->
 			<div class="button-row">
 				&nbsp;
@@ -198,6 +199,7 @@
 		<div id="boardlast"></div>	
 	</div>
 	<br>
+	<hr>
     <div id="answer"></div>
 	<br><br>
     </body>
