--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
 				<span id="9" class="summary-item"></span>
 			</div>
 			<br>
-			<div id="ffhdr"><center>TRIVIA</center></div>
+			<div id="ffhdr"></div>
 			<div id="ffdtl"></div>
-			<div id="ffhdr"><center>STAR DISTRIBUTION</center></div>
+			<div id="sdhdr">⭐ STAR DISTRIBUTION ⭐</div>
 			<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
 			<br>
 			<!-- The button used to copy the text -->
